[package]
name = "rust_rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.10.0"
surrealdb = "1.0.0"
argon2 = "0.5.2"